--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ spin = "0.5.2"
 x86_64 = "0.11.0"
 # Allows us to program to a serial port in QEMU
 uart_16550 = "0.2.0"
+# Allows us to easily program the Programmable Interrupt Controllers (PICs)
+pic8259_simple = "0.2.0"
 
 [dependencies.lazy_static]
 version = "1.0"
