--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ x86_64 = "0.11.0"
 uart_16550 = "0.2.0"
 # Allows us to easily program the Programmable Interrupt Controllers (PICs)
 pic8259_simple = "0.2.0"
+# For reading scancodes from the keyboard
+pc-keyboard = "0.5.1"
 
 [dependencies.lazy_static]
 version = "1.0"
